examples/effects/m7a_8_diag_effect_not_handled.err.expected
error: effect not handled: Fail
  --> examples/effects/m7a_8_diag_effect_not_handled.kai:13:14
     |
  13 |     Fail.fail("negative")
     |              ^
  = note: `process`'s declared row does not include `Fail`
  = note: missing effect: `Fail`
  = note: enclosing row: (empty)
  = help: either declare `process : ... / Fail`, or wrap this call site in `handle { ... } with Fail { ... }`
  = help: add `/ Fail` to `process`'s return type
  = help: or wrap the call in `handle { ... } with Fail { ... }`
